--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   password: ^1.0.0
   uuid: ^3.0.7
   flutter_bloc: ^8.1.2
+  shared_preferences: ^2.0.20
 
 
   # The following adds the Cupertino Icons font to your application.
