--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   uuid: ^3.0.7
   flutter_bloc: ^8.1.2
   shared_preferences: ^2.0.20
+  easy_search_bar: ^2.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
