--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_bloc: ^8.1.2
   shared_preferences: ^2.0.20
   easy_search_bar: ^2.5.0
+  http:
+  toast:
+  mailer: 
 
 
   # The following adds the Cupertino Icons font to your application.
