--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  mysql1: ^0.20.0
+  # mysql1: ^0.20.0 #maybe not
+  # mysql_manager: ^1.1.0
   provider: ^6.0.5
-  password: ^1.0.0
   uuid: ^3.0.7
   flutter_bloc: ^8.1.2
   shared_preferences: ^2.0.20
   easy_search_bar: ^2.5.0
   http:
   toast:
-  mailer: 
+  # mailer: 
 
 
   # The following adds the Cupertino Icons font to your application.
