--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # mysql1: ^0.20.0 #maybe not
+  # mysql1: ^0.20.0 #DOES NOT WORK ON WEB
   # mysql_manager: ^1.1.0
   provider: ^6.0.5
   uuid: ^3.0.7
@@ -72,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/
+      - assets/r2park_table.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
