some theme changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   easy_search_bar: ^2.5.0
   http:
   toast:
+  google_fonts:
   # mailer: 
 
 
@@ -73,6 +74,7 @@ flutter:
   assets:
       - assets/images/
       - assets/r2park_table.json
+      - 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
