--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,11 @@ dependencies:
   flutter_bloc: ^8.1.2
   shared_preferences: ^2.0.20
   easy_search_bar: ^2.5.0
-  email_validator: ^2.1.16
+  email_validator: ^3.0.0
   http:
   toast:
   google_fonts:
+  url_launcher: ^6.3.0
   # mailer: 
 
 
@@ -58,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.2
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
